--- a/themes/dot/layouts/partials/footer.html
+++ b/themes/dot/layouts/partials/footer.html
@@ -3,7 +3,7 @@
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<footer class="pb-0" style="background-color: var(--secondary-color); display: block; z-index=1;">
+<footer class="pb-0" style="background-color: var(--secondary-color); display: block; z-index:1;">
     <div class="container" style="background-color: var(--secondary-color)">
         <div style="display: flex; align-items: center; width: 100%">
             <div style="display: flex; align-items: center;">
