hackerist: tabela de workshops

--- a/layouts/makerist/list.html
+++ b/layouts/makerist/list.html
@@ -15,19 +15,31 @@
 <section id="home-content" style="padding-bottom: 48px;" class="single fader-alternate">
     <div class="container pt-4 aboutUsContainer">
         <div class="dynamicThingy" style="color: white">
-            
+
             <h1>
 
-            <a href="{{ .RelPermalink }}feed.xml">
-                <img src="/images/rss.svg" alt="Feed RSS" style="width: 1em !important">
+                <a href="{{ .RelPermalink }}feed.xml">
+                    <img src="/images/rss.svg" alt="Feed RSS" style="width: 1em !important">
                 </a>
                 {{.Title}}
 
             </h1>
-            
-            {{ .Content}}
         </div>
+
+
+            <div style="color: white">
+                <!-- {{ .TableOfContents }} -->
+                {{ $content := .Content }}  <!-- Get the page content -->
+
+                <!-- First, process the <h2> headings -->
+                {{ $content = partial "wrapHeading.html" (dict "content" $content "headingLevel" "h2" "divClass" "dynamicThingy") }}
+
+                <!-- Output the final processed content -->
+                {{ $content | safeHTML }}
+            </div>
     </div>
+
+
 </section>
 
 {{ partial "footer.html" . }}
