hackerist semi-decente

--- a/layouts/shortcodes/featurecard.html
+++ b/layouts/shortcodes/featurecard.html
@@ -1,6 +1,6 @@
 {{ $link := .Get "link" }}
 {{ if $link }}
-  <a href="{{ $link }}" class="feature-card" target="_blank" rel="noopener noreferrer">
+  <a href="{{ $link }}" class="feature-card" >
 {{ else }}
   <div class="feature-card">
 {{ end }}
