adição de bancas

--- a/themes/dot/assets/css/custom.css
+++ b/themes/dot/assets/css/custom.css
@@ -51,7 +51,7 @@ and (max-width: 1200px) {
 
 .banca-list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  grid-template-columns: repeat(2, minmax(320px, 1fr));
   gap: 1rem;
   margin-top: 1.5rem;
 }
