Added .en files for every menu (remains to do in for children markdowns)

--- a/layouts/shortcodes/contactos.html
+++ b/layouts/shortcodes/contactos.html
@@ -5,7 +5,7 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3112.1423706782884!2d-9.14116192402289!3d38.73749505612315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd1933a3bf58649d%3A0xd7f3d7a384498675!2sHackerSchool!5e0!3m2!1sen!2spt!4v1728936573589!5m2!1sen!2spt"  style="border:0;max-width: 100%; width:50em; height: 20em" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
         </div>
 
-        <p>Segue-nos também nas nossas redes sociais!</p>
+        <p>{{ i18n "contacts" }}</p>
 
         {{ partial "socials.html" . }}
     </div>
