about us: Added trasnaltions to this page

--- a/layouts/page/sobre.html
+++ b/layouts/page/sobre.html
@@ -27,41 +27,40 @@
         </div> -->
 
         <div class="dynamicThingy fader">
-            <h4>O que é a HackerSchool?</h4>
+            <h4> {{ i18n "about_what_is" }} </h4>
             <p style="color: white;">
-                A HackerSchool é uma associação académica que se foca no desenvolvimento de actividades num ambiente multidisciplinar, de learn-by-doing e de aprendizagem entre pares, inspirado nos valores da cultura hacker. 
+                {{ i18n "about_what_is_1" }}
             </p>
             <br>
             <p style="color: white;">
-                Aqui, independentemente da formação de base, aprende-se a criar novos produtos e serviços sobre tecnologias emergentes como a internet das coisas ou a web semântica, utilizando soluções de baixo custo assentes em open electronics, open materials, open fabrication, entre outros. 
+                {{ i18n "about_what_is_2" }}
             </p>
         </div>
 
        
         <div class="dynamicThingy fader">
-            <h4>Objectivos</h4>
+            <h4>{{ i18n "about_objectives" }} </h4>
             <p style="color: white;">
-                Enquanto núcleo do Técnico, a HackerSchool tem como objetivo fulcrar a criação de um espaço de colaboração que estimule e junte alunos apaixonados por tecnologia a realizar os seus projectos e, dessa forma, ajudá-los a encontrar a sua vocação e atingir o seu potencial máximo, tanto como indivíduos como empreendedores, através de uma interacção hands-on com tecnologia, engenharia e ciência. 
+                {{ i18n "about_objectives_1" }} 
             </p>
             <br>
             <p style="color: white;">
-                Pretende-se ter uma geração de alunos com novas ideias em mente, com uma forma diferente de pensar sobre os problemas do mundo, repercutindo-se na futura criação de produtos e concepção de soluções inovadoras. 
+                {{ i18n "about_objectives_2" }}
             </p>
             <br>
             <p style="color: white;">
-                A HackerSchool também se pretende afirmar como um centro de convergência multidisciplinar onde alunos e professores de cursos diferentes se unem para experimentar e partilhar ideias inovadoras. 
+                {{ i18n "about_objectives_3" }}
             </p>
         </div>
         
         <div class="dynamicThingy fader">
-            <h4>Eventos</h4>
+            <h4>{{ i18n "about_events" }} </h4>
 
 
 
 
             <p style="color: white;">
-
-                A HackerSchool funciona em ciclos semestrais com Workshops, HackNights e sessões de TeamBuilding. Ao longo do ano podem juntar-se à programação Hackathons, Palestras, Feiras, entre outros eventos. Os membros da HackerSchool têm sempre entrada garantida e gratuita em qualquer evento realizado pelo núcleo!
+                {{ i18n "about_events_1" }}
             </p>
             
         </div>
