Members: Updated titles to have translation

--- a/layouts/page/membros.html
+++ b/layouts/page/membros.html
@@ -21,7 +21,7 @@
   <section class="section sec-membros">
     <div class="container">
       <div class="col-12 text-center">
-        <h2 class="section-title">Direção</h2>
+        <h2 class="section-title">{{ i18n "direcao" }}</h2>
       </div>
       <div class="row justify-content-center">
           {{ "<!-- membro -->" | safeHTML }}
@@ -34,7 +34,7 @@
               <img src="/images/membros/{{ .imagem }}">
               {{ if .project }}
               <p class="hoverAppear">
-                Projeto: <br /> {{ .project }}
+                {{ i18n "projeto" }}: <br /> {{ .project }}
               </p>
               {{ end }}
           </div>
@@ -47,7 +47,7 @@
   <section class="section sec-membros">
     <div class="container">
       <div class="col-12 text-center">
-        <h2 class="section-title">Desenvolvimento</h2>
+        <h2 class="section-title">{{ i18n "desenvolvimento" }}</h2>
       </div>
       <div class="row justify-content-center">
           {{ "<!-- membro -->" | safeHTML }}
@@ -59,7 +59,7 @@
               <img src="/images/membros/{{ .imagem }}">
               {{ if .project }}
               <p class="hoverAppear">
-                Projeto: <br /> {{ .project }}
+                {{ i18n "projeto" }}: <br /> {{ .project }}
               </p>
               {{ end }}
           </div>
@@ -72,7 +72,7 @@
   <section class="section sec-membros">
     <div class="container">
       <div class="col-12 text-center">
-        <h2 class="section-title">Recursos Humanos</h2>
+        <h2 class="section-title">{{ i18n "recursos_humanos" }}</h2>
       </div>
       <div class="row justify-content-center">
           {{ "<!-- membro -->" | safeHTML }}
@@ -84,7 +84,7 @@
               <img src="/images/membros/{{ .imagem }}">
               {{ if .project }}
               <p class="hoverAppear">
-                Projeto: <br /> {{ .project }}
+                {{ i18n "projeto" }}: <br /> {{ .project }}
               </p>
               {{ end }}
           </div>
@@ -97,7 +97,7 @@
   <section class="section sec-membros">
     <div class="container">
       <div class="col-12 text-center">
-        <h2 class="section-title">Marketing</h2>
+        <h2 class="section-title">{{ i18n "marketing" }}</h2>
       </div>
       <div class="row justify-content-center">
           {{ "<!-- membro -->" | safeHTML }}
@@ -109,7 +109,7 @@
               <img src="/images/membros/{{ .imagem }}">
               {{ if .project }}
               <p class="hoverAppear">
-                Projeto: <br /> {{ .project }}
+                {{ i18n "projeto" }}: <br /> {{ .project }}
               </p>
               {{ end }}
           </div>
@@ -122,7 +122,7 @@
   <section class="section sec-membros">
     <div class="container">
       <div class="col-12 text-center">
-        <h2 class="section-title">Gestão Laboratório</h2>
+        <h2 class="section-title">{{ i18n "laboratorio" }}</h2>
       </div>
       <div class="row justify-content-center">
           {{ "<!-- membro -->" | safeHTML }}
@@ -134,7 +134,7 @@
               <img src="/images/membros/{{ .imagem }}">
               {{ if .project }}
               <p class="hoverAppear">
-                Projeto: <br /> {{ .project }}
+                {{ i18n "projeto" }}: <br /> {{ .project }}
               </p>
               {{ end }}
           </div>
@@ -149,7 +149,7 @@
   <section class="section sec-membros">
     <div class="container">      
       <div class="col-12 text-center">
-        <h2 class="section-title">Membros</h2>
+        <h2 class="section-title">{{ i18n "membros" }}</h2>
       </div>
       <div class="row justify-content-center">
           {{ "<!-- membro -->" | safeHTML }}
@@ -161,7 +161,7 @@
               <img src="/images/membros/{{ .imagem }}">
               {{ if .project }}
               <p class="hoverAppear">
-                Projeto: <br /> {{ .project }}
+                {{ i18n "projeto" }}: <br /> {{ .project }}
               </p>
               {{ end }}
           </div>
