--- a/layouts/workshops/list.html
+++ b/layouts/workshops/list.html
@@ -33,7 +33,7 @@
                         <a href="{{ .RelPermalink }}" class="btn btn-primary"  
                             style="text-align: center; vertical-align: middle; line-height: 40px;  
                             width: 80%; font-size: 20px; margin: 30px; display: inline-block;">
-                            Saber mais
+                            {{ i18n "saber_mais" }}
                         </a>
 
                     </p>
