--- a/layouts/shortcodes/button.html
+++ b/layouts/shortcodes/button.html
@@ -1,5 +1,5 @@
 <a href="{{ .Get "link" }}" class="btn btn-primary"
    style="text-align: center; vertical-align: middle; line-height: 40px;
    width: 80%; font-size: 20px; margin: 30px; display: inline-block;">
-   {{ .Get "text" | default "Saber mais" }}
+   {{ .Get "text" | default (i18n "saber_mais") }}
 </a>
