--- a/layouts/page/membros.html
+++ b/layouts/page/membros.html
@@ -28,7 +28,7 @@
           {{ range .Site.Data.membros.direcao }}
           <div class="fader member-card col-xl-3 col-lg-4 col-sm-6 col-6 dynamicThingy text-center fader-fadeInUp" style="background-color: var(--secondary-color);">
               <h3 style="padding-top: 15px;">{{ .nome }}
-                <p class="mb-0">{{ .cargo }}</p>
+                <p class="mb-0">{{ i18n .cargo }}</p>
                 <p class="mb-0">{{ .curso }}</p>
               </h3>
               <img src="/images/membros/{{ .imagem }}">
@@ -54,7 +54,7 @@
           {{ range .Site.Data.membros.desenvolvimento }}
           <div class="fader member-card col-xl-3 col-lg-4 col-sm-6 col-6 dynamicThingy text-center fader-fadeInUp" style="background-color: var(--secondary-color);">
               <h3 style="padding-top: 15px;">{{ .nome }}
-                <p class="mb-0">{{ .cargo }}</p>
+                <p class="mb-0">{{ i18n .cargo }}</p>
               </h3>
               <img src="/images/membros/{{ .imagem }}">
               {{ if .project }}
@@ -79,7 +79,7 @@
           {{ range .Site.Data.membros.recursoshumanos }}
           <div class="fader member-card col-xl-3 col-lg-4 col-sm-6 col-6 dynamicThingy text-center fader-fadeInUp" style="background-color: var(--secondary-color);">
               <h3 style="padding-top: 15px;">{{ .nome }}
-                <p class="mb-0">{{ .cargo }}</p>
+                <p class="mb-0">{{ i18n .cargo }}</p>
               </h3>
               <img src="/images/membros/{{ .imagem }}">
               {{ if .project }}
@@ -104,7 +104,7 @@
           {{ range .Site.Data.membros.marketing }}
           <div class="fader member-card col-xl-3 col-lg-4 col-sm-6 col-6 dynamicThingy text-center fader-fadeInUp" style="background-color: var(--secondary-color);">
               <h3 style="padding-top: 15px;">{{ .nome }}
-                <p class="mb-0">{{ .cargo }}</p>
+                <p class="mb-0">{{ i18n .cargo }}</p>
               </h3>
               <img src="/images/membros/{{ .imagem }}">
               {{ if .project }}
@@ -129,7 +129,7 @@
           {{ range .Site.Data.membros.laboratorio }}
           <div class="fader member-card col-xl-3 col-lg-4 col-sm-6 col-6 dynamicThingy text-center fader-fadeInUp" style="background-color: var(--secondary-color);">
               <h3 style="padding-top: 15px;">{{ .nome }}
-                <p class="mb-0">{{ .cargo }}</p>
+                <p class="mb-0">{{ i18n .cargo }}</p>
               </h3>
               <img src="/images/membros/{{ .imagem }}">
               {{ if .project }}
@@ -156,7 +156,7 @@
           {{ range .Site.Data.membros.membros }}
           <div class="fader member-card col-xl-3 col-lg-4 col-sm-6 col-6 dynamicThingy text-center fader-fadeInUp" style="background-color: var(--secondary-color);">
               <h3 style="padding-top: 15px;">{{ .nome }}
-                <p class="mb-0">{{ .cargo }}</p>
+                <p class="mb-0">{{ i18n .cargo }}</p>
               </h3>
               <img src="/images/membros/{{ .imagem }}">
               {{ if .project }}
